Reduce text, video autoplay etc

--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@ https://templatemo.com/tm-504-page-one
                   <p>Youran Song, Product Design at Kunsthochschule Weißensee</p>
                   <p>Julia Mellert, Computer Science(MSc) at FU Berlin</p>
                   <p>Simon Sasse, Computer Science(MSc) at FU Berlin</p>
+                  <img src="img/raspberry-setup.jpg" alt="raspberryPi Servo Motor setup.">
                   </div>
                   </div>
 
