--- a/documention.html
+++ b/documention.html
@@ -37,25 +37,10 @@ https://templatemo.com/tm-504-page-one
             <!-- Home -->
             <section class="parallax-window tm-section tm-section-home" id="home" data-parallax="scroll" data-image-src="img/bg-01.jpg">
               <div class="tm-page-content-width">
-                <div class="tm-textbox tm-white-bg"> 
-              <h2>Aim 🏹</h2>
-              <p>This app is supposed to augment our real world artifact using AR technology. It tracks the frontface of the artifact and projects a virtuall model onto it.</p>              This model replaces the artifact and adds a user interface.
-              <h2>Functionality 🦾</h2>
-              The augmented model will display the amount of carbon safed by the owner/user as bubble that float inside the artifact. Every day, a bubble whoms size represents the amount of safed carbon will be added to the collection. <br>
-              Users can decide to donate their safed carbon which is visualized by vines growing along the outside of the virtual artifact.
-              <h2>Implementation 🖥️</h2>
-              The application is implemented using Unity3D and C#. <br>
-              <h2><br>Project structure 📂</h2>
-             <h3>Assets</h3> 
-              The assets folder contains all content specific to this project. Scripts, 3D-models, textures etc.
-               <h3>Prefabs</h3> 
-              Prefabs are reusable objects, that can be added into a unity scene muliple times using code or the unity editor. Here is our `AR-Boilderplate` containing ar camera, lighting and so on. Additionally, the augmented artifact model is contained in this folder. This is added to the scene as soon as the frontface of the real-world artifact is recognised.
-              <h3>Images  📷</h3>
-              This directory contains the image used for the tracking which is showing the frontface design.
-              <h3>Scenes 🗺️</h3>
-              Here you can find the scenes of the project. Main is the scene used for `production` and `testGround` is a scene used for development.
-              <h3>Sounds 📢</h3>
-              Sounds contains the sounds used for UI 🥳
+                <div class="tm-textbox tm-white-bg">
+                  <h1>CO<sub>2</sub>NLINE | About the project</h1>
+                  <h2></h2>
+                  <p>This application belongs to the CO2NLINE project which was created and implemented as part of the coding IxD lecture of the FU Berlin and the KH Weissensee. The topic of was Digital Souveranity. CO2NLINE is an artefact that visualizes one's digital carbon footprint.</p>
                   </div>
                   </div>
 
