--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@ https://templatemo.com/tm-504-page-one
             <section class="parallax-window tm-section tm-section-home" id="home" data-parallax="scroll" data-image-src="img/bg-01.jpg">
                 <div class="tm-page-content-width">                  
                     <div class="tm-textbox tm-white-bg">
-                        <h2 class="tm-green-text tm-section-title">CO2nline</h2>
-                        <p>The datatraffic off this website is being tracked and its carbon footprint is visualized in the artifact in front of you.</p>
-                        <p>The more you browse, the more data is downloaded to this device.</p>
-                        <p>Since this is a local network, the actual carbon footprint is small. The artifact shows how your carbon footprint would be emitted if this was the real WWW.</p>
+                        <h2 class="tm-green-text tm-section-title">CO<sub>2</sub>NLINE</h2>
+                        <p>CO<sub>2</sub>NLINE’s carbon cube decreases in height according to your viewing time on this website.</p>
                         <a href="video.html" class="tm-btn">Product video</a>
-                        <a href="documention.html" class="tm-btn">Project Documentation</a>
+                        <a href="documention.html" class="tm-btn">About the Project</a>
                         <a href="about.html" class="tm-btn">About Us</a>
                     </div>    
                 </div>
