--- a/video.html
+++ b/video.html
@@ -38,8 +38,8 @@ https://templatemo.com/tm-504-page-one
             <section class="parallax-window tm-section tm-section-home" id="home" data-parallax="scroll" data-image-src="img/bg-01.jpg">
                 <div class="tm-page-content-width">
                     <div class="tm-videobox tm-white-bg">
-                      <h2 class="tm-green-text tm-section-title">Product Video</h2>
-                      <video type="video/mp4" src="img/product_video.mp4" controls="play">
+                      <h2 class="tm-green-text tm-section-title">CO<sub>2</sub>NLINE | Product Video</h2>
+                      <video type="video/mp4" src="img/product_video.mp4" controls loop autoplay>
                     </div>
                 </div>
             </section>
