--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ https://templatemo.com/tm-504-page-one
         <div class="container-fluid" id="main">
 
             <!-- Home -->
-            <section class="parallax-window tm-section tm-section-home" id="home" data-parallax="scroll" data-image-src="img/co2nline_title.png">
+            <section class="parallax-window tm-section tm-section-home" id="home" data-parallax="scroll" data-image-src="img/co2nline_title.jpg">
                 <div class="tm-page-content-width">                  
                     <div class="tm-textbox tm-white-bg">
                         <h2 class="tm-green-text tm-section-title">CO<sub>2</sub>NLINE</h2>
