--- a/video.html
+++ b/video.html
@@ -35,11 +35,11 @@ https://templatemo.com/tm-504-page-one
           <!-- back button -->
           <a href="index.html" class="tm-btn home-btn">Home</a>
             <!-- Home -->
-            <section class="parallax-window tm-section tm-section-home" id="home" data-parallax="scroll" data-image-src="img/co2nline_title.png">
+            <section class="parallax-window tm-section tm-section-home" id="home" data-parallax="scroll" data-image-src="img/co2nline_title.jpg">
                 <div class="tm-page-content-width">
                     <div class="tm-videobox tm-white-bg">
                       <h2 class="tm-green-text tm-section-title">CO<sub>2</sub>NLINE | Product Video</h2>
-                      <video type="video/mp4" src="img/co2nline high res.mp4" controls loop autoplay>
+                      <video type="video/mp4" src="img/co2nline low res.mp4" controls loop autoplay>
                     </div>
                 </div>
             </section>
